<resources>
    <string name="app_name">Goals</string>
    <string name="title">Title</string>
    <string name="description">Describe your goal.</string>
    <string name="duration">How many days?</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="logout">logout</string>
    <string name="camera">camera</string>
    <string name="friends">my friends</string>
    <string name="goals">my goals</string>
    <string name="username">Username</string>
    <string name="add_goal">add goal</string>
    <string name="reminder_frequency">Reminder Frequency</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account? Create one!</string>
    <string name="_0_40">40 DAYS LEFT</string>
    <string name="_0">0</string>
    <string name="_0_friends">0 friends</string>
    <string name="_0_completed_goals">0 completed goals</string>
    <string name="_0_current_goals">0 current goals</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="no_goals">Add a goal</string>
    <string name="what_s_your_goal">What\'s your goal?</string>
    <string name="no_friend_goals">Your friend hasn\'t added any goals!</string>
    <string name="delete_goal">Are you sure you want to remove this goal?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="friend_requests">friend requests</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_other_users">No other users</string>
    <string name="no_friend_requests_to_show">No friend requests to show</string>
    <string name="no_goal_requests_to_show">No goal requests to show</string>
    <string name="goal_requests">goal requests</string>
    <string name="app_title">goals</string>
    <string name="sign_me_up">Sign me up</string>
    <string name="notifications">notifications</string>
    <string name="no_notifications"> you have no new notifications</string>
    <string name="thumbs_react">thumbs</string>
    <string name="goals_react">goals</string>
    <string name="clap_react">clap</string>
    <string name="ok_react">ok</string>
    <string name="bump_react">bump_react</string>
    <string name="share_friends">Share with friends</string>
    <string name="days_question">How many days will it take?</string>
    <string name="chat">chat</string>
    <string name="message_hint">Type a message</string>
    <string name="reactions">reactions</string>
    <string name="number">##</string>
    <string name="add_friends">add friends</string>
    <string name="add_profile_pic">Add a profile picture!</string>
    <string name="friend">friends</string>
    <string name="suggested_friends">suggested friends</string>
    <string name="stories">stories</string>
    <string name="my_goals">my goals</string>
    <string name="completed_label">COMPLETED!</string>
    <string name="text">text</string>
    <string name="Text">Text</string>
    <string name="days_left">DAYS LEFT</string>
    <string name="streak">STREAK</string>
</resources>
