<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camera"
            android:icon="@drawable/camera"
            android:title="@string/camera" />
        <item android:id="@+id/nav_goals"
            android:icon="@drawable/goals"
            android:title="@string/goals" />
        <item android:id="@+id/nav_feed"
            android:icon="@drawable/feed"
            android:title="@string/friends_feed" />
        <item android:id="@+id/nav_notifications"
            android:icon="@drawable/check_circle"
            android:title="@string/notifications" />
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

</menu>