<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvGoalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvGoalUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGoalTitle"
        android:maxLines="4"
        android:layout_alignStart="@+id/tvGoalTitle"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/no_other_users"
        android:textColor="@color/grey"
        android:textSize="16sp" />

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/btnConfirm"
        android:layout_marginTop="20dp"
        android:background="@color/lightGrey" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/tvGoalUsers"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/orange"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@id/btnConfirm"
        android:layout_toRightOf="@id/btnConfirm"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/orange"
        android:text="@string/delete" />

</RelativeLayout>