<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/darkOrange" />

    <EditText
        android:id="@+id/tvUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:ems="10"
        android:background="@drawable/edittext_border"
        android:fontFamily="@font/quicksand_regular"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tvPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_border"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_regular"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        style="@style/SelectableItemBackground"
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/quicksand_regular"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"
        android:onClick="toSignup"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColor="@color/orange"
        android:fontFamily="@font/quicksand_regular"
        android:textAllCaps="false"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="30sp" />

</RelativeLayout>