<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkOrange"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="16dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="selectImage"
        android:elevation="10dp">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/ivProfile"
            app:srcCompat="@color/lightOrange" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view"
        android:fontFamily="@font/quicksand_medium"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFriends"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/quicksand_regular"
        android:lines="1"
        android:text="@string/_0_current_goals"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvProgress"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/quicksand_regular"
        android:lines="1"
        android:text="@string/_0_completed_goals"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:fontFamily="@font/quicksand_regular"
        android:lines="1"
        android:text="@string/_0_friends"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/white" />

</RelativeLayout>