<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/orange"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ivStory"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/ivStory"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/title"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvTitle"
                android:layout_below="@id/tvTitle"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/description"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tvDescription"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/_0_40"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvStreak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tvProgress"
                android:layout_alignLeft="@id/ivProfile"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:text="@string/_0" />

            <ImageView
                style="@style/SelectableItemBackground"
                android:id="@+id/ivStory"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/add_circle" />

            <ImageView
                android:id="@+id/ivStar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_toRightOf="@+id/tvStreak"
                android:layout_alignTop="@id/tvStreak"
                android:layout_marginLeft="5dp"
                android:visibility="invisible"
                android:tint="@color/lightOrange"
                app:srcCompat="@drawable/star" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>