<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/lightGrey" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/card_view"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand"
        android:text="FRIEND REQUEST"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvText"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="12dp">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/placeholder_profile" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/card_view"
        android:layout_marginLeft="16dp"
        android:layout_alignTop="@id/card_view"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/card_view"
        android:layout_alignLeft="@id/tvUsername"
        android:background="@drawable/button_border"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/orange"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/card_view"
        android:layout_toRightOf="@id/btnConfirm"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/orange"
        android:text="@string/delete" />

</RelativeLayout>