<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGoalActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/background_dark" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/orange"
        app:theme="@style/AppTheme"
        android:elevation="10dp"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                style="@style/SelectableItemBackground"
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/cancel"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/white"
                android:onClick="goBack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/add_goal"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <Button
                style="@style/SelectableItemBackground"
                android:id="@+id/btnPost"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/check"
                android:backgroundTint="@color/white"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:onClick="postGoal" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:fontFamily="@font/quicksand_regular"
                android:hint="@string/what_s_your_goal"
                android:inputType="textPersonName" />


            <TextView
                android:id="@+id/tvFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/sbDuration"
                android:layout_below="@+id/sbDuration"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/reminder_frequency"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/sbDuration"
                android:layout_below="@id/tvFrequency"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_regular"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/daily"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_regular"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/weekly"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_regular"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/monthly"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/etTitle"
                android:text="How many days will it take? 50"
                android:layout_alignLeft="@id/etTitle"
                android:fontFamily="@font/quicksand_medium"
                android:textSize="18sp"
                android:layout_marginTop="30dp" />

            <SeekBar
                android:id="@+id/sbDuration"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tvDuration"
                android:max="101"
                android:min="1"
                android:progress="50"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tvShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/rgFrequency"
                android:text="Share with friends"
                android:layout_alignLeft="@id/etTitle"
                android:fontFamily="@font/quicksand_medium"
                android:textSize="18sp"
                android:layout_marginTop="30dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvShareFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvShare"
                android:layout_alignStart="@id/tvShare"
                android:layout_alignEnd="@+id/etTitle"
                android:layout_marginTop="10dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>